--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^16.8.2",
-    "@types/react-dom": "^16.8.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "recoil": "^0.5.2"
+    "@types/react": "16.14.21",
+    "@types/react-dom": "16.9.14",
+    "history": "^5.1.0",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-router-dom": "6.0.2",
+    "recoil": "0.5.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
