--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.8.3",
     "@types/react": "16.14.21",
     "@types/react-dom": "16.9.14",
-    "history": "^5.1.0",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "react-router-dom": "6.0.2",
-    "recoil": "0.5.2"
+    "history": "5.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.0.0",
+    "react-router-dom": "5.3.0",
+    "recoil": "0.5.2",
+    "yup": "0.32.11"
   },
   "scripts": {
     "start": "react-scripts-ts start",
